--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
     .ubuntu-regular {
   font-family: "Ubuntu", sans-serif;
@@ -21,7 +22,7 @@ body {
 
 }
 
-#dropdownGrade {
+#dropdown {
   padding: 4px;
   width: 250px;
   margin-bottom: 25px;
@@ -68,10 +69,8 @@ body {
 
     section {
         margin-top: 50px;
-
+        
     }
-
-
     .calculadoras {
       display: flex;
       flex-direction: column; /* Organiza os elementos na vertical */
@@ -85,16 +84,14 @@ body {
       padding: 45px;
       text-align: center;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-     
     }
 
-    .calculadoraGrade {
+    .calculadora {
   display: none; /* Calculadoras ocultas por padrão */
 }
 
-.calculadoraGrade.active {
+.calculadora.active {
   display: block; /* Apenas a calculadora ativa será exibida */
-  
 
 }
 
@@ -128,4 +125,5 @@ body {
     tbody > tr:nth-of-type(even) {
       background-color: rgb(237 238 242);
     }
+    
     
